# serialize

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  core.hpp
src/io_providers/: file_io.hpp
src/serializers/: integral.hpp  string.hpp  unordered_map.hpp  unordered_set.hpp  vector.hpp
tests/: CMakeLists.txt  testing.cpp
